[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-ai-digest"
version = "0.1.0"
description = "Local arXiv AI paper tracking and summarization app."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.44,<2",
  "PyMuPDF>=1.25,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
